# agent-staff

./: .env  .env.example  README.md  pyproject.toml
config/: settings.py
prompts/: developer.md  product_manager.md  tester.md
skills/: README.md
src/: main.py
src/agents/: developer.py  product_manager.py  tester.py
src/approval/: manager.py
src/core/: agent.py  graph.py  llm_client.py  message_bus.py  orchestrator.py  skill_manager.py
src/telegram/: bot_manager.py  formatter.py  router.py
src/tools/: base.py  code_executor.py  file_ops.py  git_tool.py  screenshot.py  skill_tools.py
